--- a/projects/sharepoint/RELEASE_NOTES
+++ b/projects/sharepoint/RELEASE_NOTES
@@ -7,6 +7,116 @@ The following sections describe the release in detail and provide information th
 Web Site: http://code.google.com/p/google-enterprise-connector-sharepoint/
 
 
+Release 3.2.4, January 22, 2014
+===============================
+
+Introduction
+------------
+This is a maintenance release that improves quality without adding any
+new functionality. Users of previous releases are encouraged to
+upgrade. Users of previous releases should check the "Version
+Compatibility" section below for instructions on how to use existing
+data with this new release.
+
+Summary of Changes
+------------------
+For a summary of the new features, see the Guide to Release 3.0:
+
+http://www.google.com/support/enterprise/static/gsa/docs/admin/connector_30/sharepoint_guide/
+
+Java SE 5.0 is no longer supported. Java 6 or later is required.
+
+SharePoint 2003 and WSS 2.0 are no longer supported.
+
+The Google Services for SharePoint (GSS) component has been renamed to
+Connector Services for SharePoint in Google Search Appliance.
+Some occurrences of the old name may still appear, but refer to the
+same component.
+
+Issues Fixed Since 3.2.2
+------------------------
+12584298 - SharePoint connector associates documents from one list to crawl 
+           queue for another list. Connector gets stuck into the loop feeding 
+           same documents again and again.
+
+12080286 - Changing default view URL for SharePoint List will result in stale 
+           records in index for already traversed content from the list.
+           Connector will log old URLs to "default_view_url_changes.txt" file 
+           under "excluded-URLs" directory which can be used by GSA 
+           administrators to remove stale records from index.
+
+12021726 - Raise the default aclBatchSizeFactor to 10 and improve its use to 
+           generate predictable ACL batch size. ACL batching is still disabled 
+           by default, but is automatically enabled with flattened ACLs even 
+           if fetchACLInBatches is false.
+
+11987705 - ACL web service will partially process Web Application policy when 
+           ACL web service fails to resolve principal for policy user.
+
+11987234 - ACL Web service should use default zone for reading IIS settings and 
+           resolving windows principals when extended web  application is not 
+           available for Connector URL zone.
+
+11897074 - SharePoint connector should not feed documents for a batch when 
+           ACL retrieval fails due to an exception on SharePoint.
+
+11846732, 11322738 - SharePoint connector constructs invalid Document IDs and 
+           display URLs when Default View URL for list is empty or customized in 
+           a non-standard.
+
+11806563 - SharePoint connector should reindex all SharePoint local groups when 
+           ACL change token available with connector is expired or invalid.
+
+11748823 - SharePoint connector marks documents as public even if anonymous 
+           access is disabled on on IIS web site hosting SharePoint web 
+           application.
+
+11257557 - Site Discovery web service always returns Site URLs from default URL 
+           zone even if connector is configured to use non-default zone URL.
+
+10935952 - Log excluded URLs at lower log level instead of WARNING level.
+
+8466399  - Connector should not get stuck when it cannot resolve groups.
+
+Version Compatibility
+---------------------
+This version works with Connector Manager version 3.0.4 and above. Versions
+lower than 3.0.4 of the Connector Manager will not work correctly with this
+version of the connector. Connectors with version 2.4.0 and above can be
+safely upgraded using the steps given below.
+
+This version works with Connector Services for SharePoint 3.2.4. Versions
+lower than 3.2.4 of Connector Services for SharePoint will not work
+correctly with this version of the connector.
+
+This version works with Active Directory Groups connector 3.2.0 and above.
+Versions lower than 3.2.0 of Active Directory Groups connector are not
+compatible with version 3.2.4 of SharePoint connector.
+
+ACL inheritance and Deny permission, and crawling user profiles for Expert 
+Search works only with GSA 7.0 and higher. All the other connector features work 
+with all supported versions of the GSA.
+
+Manually upgrade an existing connector and Connector Services for SharePoint
+----------------------------------------------------------------------------
+The steps to manually upgrade an existing connector or a Connector Services for 
+SharePoint can be found at http://code.google.com/p/google-enterprise-connector-sharepoint/wiki/ManualInstallation.
+
+Platform Support
+------------------
+The connector can be installed and run on both 32-bit and 64-bit Windows
+and Linux environments.
+
+--Microsoft Windows Server 2012
+--Microsoft Windows Server 2008 R2
+--Microsoft Windows Server 2008
+--Microsoft Windows Server 2003
+--Red Hat Enterprise Linux 6
+--Red Hat Enterprise Linux 5
+
+Note: This release has been tested against blank form templates and sample form templates provided by Microsoft Office InfoPath 2007.
+
+
 Release 3.2.2, October 23, 2013
 ===============================
 
