--- a/projects/sharepoint/RELEASE_NOTES
+++ b/projects/sharepoint/RELEASE_NOTES
@@ -114,7 +114,7 @@ and Linux environments.
 --Red Hat Enterprise Linux 6
 --Red Hat Enterprise Linux 5
 
-Note: This release has been tested against blank form templates and sample form templates provided by Microsoft Office InfoPath 2007.
+Note: This release has been tested against blank form templates and sample form templates provided by Microsoft Office InfoPath 2007 and InfoPath 2010.
 
 
 Release 3.2.2, October 23, 2013
